--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/rect_shape"
+                        android:background="@drawable/shimmer_shape"
                         android:backgroundTint="?attr/shimmerColor"
                         android:visibility="visible" />
                 </com.facebook.shimmer.ShimmerFrameLayout>
