--- a/app/src/main/res/layout/fragment_addmembers_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_addmembers_bottom_sheet.xml
@@ -94,7 +94,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/rect_shape"
+                        android:background="@drawable/shimmer_shape"
                         android:visibility="visible"
                         android:backgroundTint="?attr/shimmerColor"/>
                 </com.facebook.shimmer.ShimmerFrameLayout>
