--- a/app/src/main/res/layout/activity_notification_preferences.xml
+++ b/app/src/main/res/layout/activity_notification_preferences.xml
@@ -19,7 +19,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -42,7 +43,8 @@
                 android:text="NÃO"
                 android:textStyle="bold"
                 android:textSize="14sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:layout_marginEnd="10dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -55,14 +57,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="10dp"
-                android:text="Notificações de detecção de Fogo"
+                android:text="Detecção de Fogo"
+                android:maxLines="1"
+                android:ellipsize="middle"
                 android:textSize="16sp"/>
 
             <CheckBox
                 android:id="@+id/fireYes"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:checked="false"
+                android:checked="true"
                 android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
 
@@ -71,11 +75,80 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:checked="false"
+                android:layout_marginEnd="10dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"/>
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:text="Status de Convites Enviados"
+                android:maxLines="1"
+                android:ellipsize="middle"
+                android:textSize="16sp"/>
+
+            <CheckBox
+                android:id="@+id/receivedInvitesYes"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checked="true"
+                android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
+
+            <CheckBox
+                android:id="@+id/receivedInvitesNo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checked="false"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_marginEnd="10dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:text="Convites Recebidos"
+                android:maxLines="1"
+                android:ellipsize="middle"
+                android:textSize="16sp"/>
+
+            <CheckBox
+                android:id="@+id/sentInvitesYes"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checked="true"
+                android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
+
+            <CheckBox
+                android:id="@+id/sentInvitesNo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checked="false"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_marginEnd="10dp"/>
+        </LinearLayout>
+
+
+
     </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
