--- a/app/src/main/res/layout/activity_recoverpassword.xml
+++ b/app/src/main/res/layout/activity_recoverpassword.xml
@@ -10,19 +10,20 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_marginTop="52dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="start"
-            android:gravity="start">
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <LinearLayout
                 android:id="@+id/linearVerification"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -205,14 +206,16 @@
                         android:textSize="15sp"/>
                 </LinearLayout>
 
-                <Button
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnCheck"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="60dp"
                     android:layout_marginTop="10dp"
-                    style="@style/CustomButtonStyle"
+                    android:textSize="16sp"
                     android:textStyle="bold"
-                    android:text="@string/verificar" />
+                    android:text="Verificar Código"
+                    app:rippleColor="?attr/colorControlHighlight"/>
 
 
             </LinearLayout>
@@ -220,13 +223,13 @@
             <LinearLayout
                 android:id="@+id/linearEmail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:visibility="gone">
+                android:visibility="visible"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -234,22 +237,18 @@
                     android:layout_gravity="start"
                     android:textColor="?android:attr/textColorPrimary"
                     android:textSize="15sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:layout_marginBottom="5dp"/>
 
-                <com.google.android.material.textfield.TextInputLayout
+                <EditText
+                    android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:hint="Email">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtEmail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"
-                        android:textColor="?android:attr/textColorPrimary"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="60dp"
+                    android:background="@drawable/component_bg"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_marginBottom="10dp"/>
 
 
                 <com.google.android.material.button.MaterialButton
@@ -258,10 +257,8 @@
                     android:layout_height="60dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:text="ENVIAR"
-                    app:rippleColor="?attr/colorControlHighlight"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"/>
+                    android:text="Enviar Solicitação"
+                    app:rippleColor="?attr/colorControlHighlight"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -272,7 +269,9 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:maxLines="2"
+                    android:ellipsize="middle"/>
 
             </LinearLayout>
 
@@ -285,7 +284,7 @@
                 android:gravity="center"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
                 <TextView
@@ -340,13 +339,13 @@
                     android:layout_marginBottom="10dp"
                     />
 
-                <Button
-                    android:layout_marginTop="10dp"
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnChangePassword"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:text="ALTERAR SENHA"
-                    android:textStyle="bold"/>
+                    android:text="Alterar minha senha"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
         </LinearLayout>
